// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add widget to dashboard 1`] = `
Object {
  "items": Object {
    "@dashboard/01": Object {
      "initialized": true,
      "settings": Object {
        "version": "0.0.1",
        "widgets": Array [
          "@widget/01",
        ],
      },
    },
  },
  "metadata": Object {
    "data": Array [
      Object {
        "id": "@dashboard/01",
        "isPublic": false,
        "lastModificationDate": 0,
        "queries": 0,
        "tags": Array [],
        "title": null,
        "widgets": 1,
      },
    ],
    "error": null,
    "isInitiallyLoaded": false,
    "isLoaded": true,
  },
}
`;

exports[`removes widget from dashboard 1`] = `
Object {
  "items": Object {
    "@dashboard/01": Object {
      "initialized": true,
      "settings": Object {
        "version": "0.0.1",
        "widgets": Array [],
      },
    },
  },
  "metadata": Object {
    "data": Array [
      Object {
        "id": "@dashboard/01",
        "isPublic": false,
        "lastModificationDate": 0,
        "queries": 0,
        "tags": Array [],
        "title": null,
        "widgets": 0,
      },
    ],
    "error": null,
    "isInitiallyLoaded": false,
    "isLoaded": true,
  },
}
`;
